--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
   "name": "webpack_base",
   "version": "1.0.0",
-  "description": "",
+  "description": "npm install webpack --save-dev  安装全局到本地的webpack插件\r npm install --save-dev html-webpack-plugin 安装html插件，生成html\r npm install babel-loader@7 babel-core babel-preset-env --save-dev\r npm install babel-preset-react --save-dev\r npm install --save-dev css-loader\r npm install --save-dev style-loader\r cnpm install extract-text-webpack-plugin@4.0.0-beta.0 --save-dev 生成css包，让CSS包是与JS包并行加载的。",
   "main": "index.js",
   "dependencies": {
+    "antd-mobile": "^2.2.3",
+    "axios": "^0.18.0",
+    "express": "^4.16.3",
     "font-awesome": "^4.7.0",
+    "mongoose": "^5.2.12",
+    "nodemon": "^1.18.4",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "connect-history-api-fallback": "^1.5.0",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
@@ -23,13 +34,21 @@
     "url-loader": "^1.1.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.6"
+    "webpack-dev-server": "^3.1.7"
   },
   "scripts": {
-    "dev-server":"node_modules/.bin/webpack-dev-server",
-    "dev":"node_modules/.bin/webpack -p",
+    "dev-server": "webpack-dev-server --host 0.0.0.0  --hot --inline",
+    "dev": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/qiangliu8/webpack.git"
+  },
+  "bugs": {
+    "url": "https://github.com/qiangliu8/webpack/issues"
+  },
+  "homepage": "https://github.com/qiangliu8/webpack#readme"
 }
