--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "connect-history-api-fallback": "^1.5.0",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
@@ -34,10 +33,11 @@
     "url-loader": "^1.1.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7"
+    "webpack-dev-server": "^3.1.7",
+    "webpack-parallel-uglify-plugin": "^1.1.0"
   },
   "scripts": {
-    "dev-server": "webpack-dev-server --host 0.0.0.0  --hot --inline",
+    "dev-server": "webpack-dev-server --host 0.0.0.0 --hot --inline --mode development",
     "dev": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
