--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "utility": "^1.14.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -39,7 +40,7 @@
     "webpack-dev-server": "^3.1.7"
   },
   "scripts": {
-    "dev-server": "webpack-dev-server --host 0.0.0.0 --hot --inline --mode development",
+    "dev-server": "webpack-dev-server --host 0.0.0.0 --hot --inline --content-base --mode development",
     "dev": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
