--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "font-awesome": "^4.7.0",
     "mongoose": "^5.2.12",
     "nodemon": "^1.18.4",
+    "prop-types": "^15.6.2",
     "rc-form": "^2.2.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
