--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd-mobile": "^2.2.3",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "browser-cookies": "^1.2.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
